feat: design change for bookmarks.
